--- a/views/partials/body_ventas.ejs
+++ b/views/partials/body_ventas.ejs
@@ -1,41 +1,28 @@
-<section class="ventas_box ">
-    <div class="pepito d-flex justify-content-between align-items-center ml-auto">
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-5 col-xl-3 d-flex flex-wrap border-5">
-            <a class="venta_box d-flex flex-wrap " href="/products/vender">
-                <h4>crea un anuncio </br>gratis</h4>
-                <p>Publica en solo minutos para que tu producto esté
-                    en frente a millones de consumidores.</p>
-                <h2>vende ahora</h2>
-            </a>
-        </div>
-        <div class="col-xs-6 col-sm-5 col-md-4 col-lg-3 col-xl-3 d-flex position-relative">
-            <img class="beer_ventas position-absolute" src="img/banner/beer_shadow.png" alt="">
-        </div>
-    </div>
-    <div class="slogan_ventas col-xs-12 col-sm-12 col-md-6 col-lg-5 col-xl-4  d.flex">
-        <p class="mb-0">Siempre es buen momento</p>
-        <p class="mb-2 ml-4">para darse un gusto...</p>
-    </div>
-<!--
-    <div class="container bg-warning w-100 p-0 m-0">
-        <div class="row">
-            <div class="col-12  p-5">
-                <div class="media">
-                    <div class="media-body col-3 border border-dark border-3 p-3">
-                        <h4>crea un anuncio</h4>
-                        <h4>gratis</h4>
-                        <h5 class="font-weight-light">publica en solo minutos 
-                            para que tu producto esté 
-                            en frente a millones 
-                            de consumidores</h5>
-                        <a class="" href="/form_prod.ejs">
-                            <button type="button" class="btn btn-outline-dark border-3 rounded-0 m-auto font-weight-bold">vende ahora</button>
-                        </a>
+<div class="jumbotron jumbotron-fluid bg-warning">
+    <div class="container mt-0">
+        <div class="row d-flex justify-content-between align-items-center">
+            <div class="col-6">
+                <h1 class="display-4">¿qué vas a publicar?</h1>
+                <p class="lead">Publica en solo minutos para que tu producto </br> 
+                esté en frente a millones de consumidores.</p>
+                <a class="btn btn-outline-dark btn-lg" href="#" role="button">Vender</a>
+            </div>
+            <div class="col-4">    
+                <div class="position-relative">
+                    <div class="position-absolute">
+                        <img class="beer_ventas position-absolute" width="50" src="img/banner/beer_shadow.png" alt="">
                     </div>
                 </div>
             </div>
         </div>
-        
     </div>
--->
+  </div>
+
+<script defer src="/js/duffBeer.js"></script>
+
+
+
+
+
+
 </section>
