--- a/views/form_prod.ejs
+++ b/views/form_prod.ejs
@@ -1,32 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  
+
     <%- include("partials/head", {title: "Vende por CanillaLibre"}) %>
+
+    
+       
     
 <body class="bg_color">
+    
     <!--header/javi -->
     <%- include("partials/header") %>
+    
 
     <!--ventas/diego -->
     <section class="container mt-5 mb-5">
         <div class="row">
-            <form class="col-xl-9 col-lg-9 col-md-9 col-sm-12 m-auto bg-white text-dark p-4 rounded animate__animated animate__zoomIn" 
-            action="/products/form_prod"
-                method="POST" enctype="multipart/form-data">
+
+
+            <form class="col-xl-9 col-lg-9 col-md-9 col-sm-12 m-auto bg-white text-dark p-4 rounded animate__animated animate__zoomIn" action="/products/form_prod" method="POST" enctype="multipart/form-data" id="form" onsubmit="return validar()">
                 <div class="register-title col-12">
                     <h2 class="title_categoria">
                         <i class="fas fa-hand-holding-usd text-black-50"></i></i> Vende por Canilla<strong>Libre</strong>.com
                     </h2>
                 </div>
-                
+
+                   
+
+
                 <div class="dropdown-divider"></div>
                 <!-- titulo de venta -->
                 <h4 class="mb-4 mt-4">¿Qué es lo que estas vendiendo?</h4>
                 <div class="row align-items-center">
                     <div class="form-group col-9">
-                        <label for="sell_title">Título del Anuncio</label>
-                        <input type="text" class="form-control" id="title_sell" placeholder="Introduce el nombre de tu producto" aria-describedby="sell_title" name="nombre" />
+                        <label for="nombre">Título del Anuncio</label>
+                        <input type="text" class="form-control"  placeholder="Introduce el nombre de tu producto" aria-describedby="sell_title" name="nombre" id="nombre"/>
+                        
+                    <div id="validacion_nombre" class="text-danger"></div>
+
                     </div>
+
+    
+
                     <!-- envios -->
                     <div class="col-3">
                         <div class="custom-control custom-checkbox mr-sm-2">
@@ -37,15 +54,20 @@
                 </div>
                 <!-- descripcion -->
                 <div class="form-group">
-                    <label for="sell_description">Hace una breve despricion de lo que vas a vender</label>
-                    <textarea class="form-control" id="sell_description" rows="3" placeholder="No te olvides datos importantes" name="descripcion" ></textarea>
+                    <label for="descripcion">Hace una breve despricion de lo que vas a vender</label>
+                    <textarea class="form-control" rows="3" placeholder="No te olvides datos importantes" name="descripcion" id="descripcion"></textarea>
+
+                    <div id="validacion_descripcion" class="text-danger"></div>
+
+                    
                 </div>
+                
+
                 <div class="row mt-2 mb-4 justify-content-between">
                     <div class="form-group col-4">
                         <p class="mb-1">Marca</p>
                         <div class="custom-file">
-                            <input type="text" class="form-control" id="title_sell" aria-describedby="sell_title" id="marca" name="marca" disabled/>  <!-- se encuentra desabilitado hasta la implementacion de campos en tabla -->
-                            
+                            <input type="text" class="form-control" id="title_sell" aria-describedby="sell_title"  name="marca" id="marca" disabled/>  <!-- se encuentra desabilitado hasta la implementacion de campos en tabla -->
                         </div>
                     </div>
                 </div>
@@ -53,7 +75,7 @@
                     <!-- origen -->
                     <div class="form-group col-3" >
                         <label for="sell_origin">Origen</label>
-                        <select id="sell_origin" class="form-control" name="origen" disabled> <!-- se encuentra desabilitado hasta la implementacion de campos en tabla -->
+                        <select  class="form-control" name="origen" id="origen" disabled> <!-- se encuentra desabilitado hasta la implementacion de campos en tabla -->
                             <option selected>Seleccione...</option>
                             <option>Nacional</option>
                             <option>Internacional</option>
@@ -62,7 +84,7 @@
                     <!-- tipo de Producto-->
                     <div class="form-group col-3">
                         <label for="">Tipo de Producto</label> </br>
-                        <select class="custom-select my-1 mr-sm-2" name="productoId">
+                        <select class="custom-select my-1 mr-sm-2" name="productoId" id="productoId">
                             
                                 <option value=" <%= Bebidas.productoId %> ">Bebidas</option>
                                 <option value=" <%= Insumos.productoId %> " disabled>Insumos</option> <!-- se encuentran desabilitadas hasta incluir la asosiacion de tablas -->
@@ -73,7 +95,7 @@
                     <!-- categoria -->
                     <div class="form-group col-3">
                         <label for="sell_category">Categoría</label>
-                        <select id="sell_category" class="form-control" name="categoria" disabled> <!-- se encuentra desabilitado hasta la implementacion de campos en tabla -->
+                        <select id="sell_category" class="form-control" name="categoria" id="categoria" disabled> <!-- se encuentra desabilitado hasta la implementacion de campos en tabla -->
                             <option selected>Seleccione...</option>
                             <option>Ale</option>
                             <option>Ipa</option>
@@ -90,7 +112,7 @@
                     <!-- presentacion -->
                     <div class="form-group col-3">
                         <label for="sell_container">Presentación</label>
-                        <select id="sell_container" class="form-control" name="presentacion" disabled> <!-- se encuentra desabilitado hasta la implementacion de campos en tabla -->
+                        <select id="sell_container" class="form-control" name="presentacion" id="presentacion" disabled> <!-- se encuentra desabilitado hasta la implementacion de campos en tabla -->
                             <option selected>Seleccione...</option>
                             <option>Lata</option>
                             <option>Porron</option>
@@ -105,10 +127,15 @@
                     <div class="form-group col-4">
                         <p class="mb-1">Primera imagen</p>
                         <div class="custom-file">
-                            <input type="file" class="custom-file-input" id="" lang="es"  name="imagen"/>
+                            <input type="file" class="custom-file-input"  lang="es"  name="imagen" id="imagen"/>
                             <label class="custom-file-label" for="">Seleccionar Archivo</label>
                         </div>
+                        <div id="validacion_imagen" class="text-danger"></div>
                     </div>
+                    
+
+                  
+
                     <!-- imagen2 -->
                     <div class="form-group col-4">
                         <p class="mb-1">Segunda Imagen<em></em></p>
@@ -133,19 +160,19 @@
                     <!-- precio -->
                     <div class="form-group col-3">
                         <label for="sell_price"><i class="fas fa-hand-holding-usd"></i> Precio Unidad</label>
-                        <input type="number" class="form-control" id="sell_price" placeholder="precio"
-                            aria-describedby="sell_price" name="precioUnitario" />
+                        <input type="number" class="form-control" placeholder="precio"
+                            aria-describedby="sell_price" name="precioUnitario" id="precioUnitario" />
                     </div>
                     <!-- cantidad -->
                     <div class="form-group col-3">
                         <label for="sell_quantity">Stock</label>
-                        <input type="number" class="form-control" id="sell_quantity" placeholder="cantidad" aria-describedby="sell_quantity"
-                            name="stock"/>
+                        <input type="number" class="form-control"  placeholder="cantidad" aria-describedby="sell_quantity"
+                            name="stock" id="stock"/>
                     </div>
                     <!-- descuento -->
                     <div class="form-group col-3 p-2">
                         <label for="sell_discount"><i class="fas fa-percentage"></i> Descuento </label>
-                        <input type="number" class="form-control" id="sell_discount" placeholder="porcentaje" aria-describedby="sell_discount" name="descuento" />
+                        <input type="number" class="form-control"  placeholder="porcentaje" aria-describedby="sell_discount" name="descuento" id="descuento"/>
                     </div>
                 </div>
                 <div class="dropdown-divider"></div>
@@ -190,7 +217,7 @@
 
                 <!-- boton enviar -->
                 <div class="col-12 d-flex justify-content-center mt-2">
-                    <button type="submit" class="btn btn-outline-warning mt-3 mb-3">
+                    <button type="submit" class="btn btn-outline-warning mt-3 mb-3" onclick="validate()">
                         Publicar
                     </button>
                 </div>
@@ -198,19 +225,19 @@
                 
             </form>
         </div>
-        <!--script para filename-->
-        <script>
-            $("#image1").on("change", function () {
-                //get the file name
-                var fileName = $(this).val();
-                //replace the "Choose a file" label
-                $(this).next(".custom-file-label").html(fileName);
-            });
-        </script>
     </section>
+
 </body>
       
     <!--footer/fran -->
     <%- include("partials/footer") %>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
+    <script src="/js/validacionCrearProducto.js"></script>
+
+    
 </body>
 </html>
