--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,8 @@
 <html lang="en">
   <!--head-->
   <%- include("partials/head", {title: "Canilla Libre - Login"}) %>
-
+ 
+  
   <body class="bg_color">
     <!--header-->
     <%- include("partials/header") %>
@@ -25,8 +26,11 @@
       <div class="row">
         <form
           class="col-xl-5 col-lg-5 col-md-6 col-sm-6 m-auto bg-white text-dark p-4 rounded animate__animated animate__zoomIn"
+          id = "form_login"
           action="/auth/login"
           method="POST"
+          onsubmit="return validarUsuario()"
+          
           
         >
           <div class="register-title col-12">
@@ -41,17 +45,19 @@
           <div class="form-group row">
             <div class="form-group col">
               <label for="email">Direccion Email</label>
+               <!--type="email" -->
               <input
-                type="email"
                 class="form-control"
                 name="email"
                 id="email"
                 aria-describedby="email"
-                required
+               
               />
               <small id="email" class="form-text text-muted"
                 >Ingrese su correo: nombre@dominio.com</small
               >
+              <div id="validacion_email" class="text-danger"></div>
+              <div id="validacion_email_format" class="text-danger"></div>
             </div>
           </div>
 
@@ -66,6 +72,7 @@
               aria-describedby="pass"
               
             />
+            <div id="validacion_password" class="text-danger"></div>
           </div>
 
           <!-- guardar usr -->
@@ -84,7 +91,7 @@
           </div>
           <!-- boton enviar -->
           <div class="col-12 d-flex justify-content-center">
-            <button type="submit" class="btn btn-outline-warning mt-3 mb-3">
+            <button  type="submit" class="btn btn-outline-warning mt-3 mb-3">
               Ingresar
             </button>
           </div>
@@ -92,6 +99,7 @@
       </div>
 
       <!--script para filename del avatar-->
+      <script src= "/js/formlogin.js"></script>  
       <script>
         $("#avatar").on("change", function () {
           //get the file name
@@ -100,9 +108,19 @@
           $(this).next(".custom-file-label").html(fileName);
         });
       </script>
+
+      
+      
+      
+     
+      
+     
     </section>
 
     <!--footer/fran -->
     <%- include("partials/footer") %>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
   </body>
 </html>
