--- a/views/product-edit-form.ejs
+++ b/views/product-edit-form.ejs
@@ -3,26 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta value="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  
+
+
     <%- include("partials/head", {title: "Registro"}) %>
   </head>
 
   <body class="bg_color">
     <!--header/javi -->
     <%- include("partials/header") %>
-     <form class="col-xl-9 col-lg-9 col-md-9 col-sm-12 mt-5 mb-5 mr-auto ml-auto bg-white text-dark p-4 rounded animate__animated animate__zoomIn" action="/products/<%= product.id %>/edit/" method="POST" enctype="multipart/form-data">
+     <form class="col-xl-9 col-lg-9 col-md-9 col-sm-12 mt-5 mb-5 mr-auto ml-auto bg-white text-dark p-4 rounded animate__animated animate__zoomIn" action="/products/<%= product.id %>/edit/" method="POST" enctype="multipart/form-data" id="form" onsubmit="return validar()">
+
                 <div class="register-title col-12">
                     <h2 class="title_categoria">
                         <i class="fas fa-hand-holding-usd text-black-50"></i></i> Vende por Canilla<strong>Libre</strong>.com
                     </h2>
                 </div>
                 <div class="dropdown-divider"></div>
+
                 <!-- titulo de venta -->
                     <h4 class="mb-4 mt-4">Estas editando el producto <%= product.nombre %> | id: <%= product.id %>  </h4>
                 <div class="row align-items-center">
                     <div class="form-group col-9">
                         <label for="sell_title">Título del Anuncio</label>
-                        <input type="text" class="form-control" id="title_sell" id="titulo" name="nombre" value="<%= product.nombre  %>" aria-describedby="sell_title"/> 
+                        <input type="text" class="form-control" name="nombre" id="nombre" value="<%= product.nombre  %>" aria-describedby="sell_title"/> 
+
+                        <div id="validacion_nombre" class="text-danger"></div>
+
                     </div>
+
                      <!-- envios -->
                     <div class="col-3">
                         <div class="custom-control custom-checkbox mr-sm-2">
@@ -31,10 +42,14 @@
                         </div>
                     </div>
                 </div>
+
                 <!-- descripcion -->
                 <div class="form-group">
                     <label for="sell_description">Hace una breve despricion de lo que vas a vender</label>
-                    <textarea class="form-control" id="sell_description" rows="3" placeholder="No te olvides datos importantes" id="descripcion" name="descripcion" ><%= product.descripcion %> </textarea>
+                    <textarea class="form-control" id="sell_description" rows="3" placeholder="No te olvides datos importantes" name="descripcion" id="descripcion" ><%= product.descripcion %> </textarea>
+
+                    <div id="validacion_descripcion" class="text-danger"></div>
+
                 </div>
                 <div class="row mt-2 mb-4 justify-content-between">
                     <div class="form-group col-4">
@@ -104,8 +119,11 @@
                     <div class="form-group col-4">
                         <p class="mb-1">Primera imagen</p>
                         <div class="custom-file">
-                            <input type="file" class="custom-file-input" id="" lang="es"  name="imagen"/>
+                            <input type="file" class="custom-file-input"  lang="es"  name="imagen" id="imagen"/>
                             <label class="custom-file-label" for="">Seleccionar Archivo</label>
+
+                            <div id="validacion_imagen" class="text-danger"></div>
+
                         </div>
                     </div>
                 </div>
@@ -143,22 +161,21 @@
                 </div>
                  <!-- boton guardar -->
                 <div class="col-12 d-flex justify-content-center mt-2">
-                    <button type="submit" class="btn btn-outline-warning mt-3 mb-3">
+                    <button type="submit" class="btn btn-outline-warning mt-3 mb-3" >
                         Guardar
                     </button>
                 </div>
 
-                <!--script para filename-->
-                <script>
-                    $("#image1").on("change", function () {
-                        //get the file name
-                        var fileName = $(this).val();
-                        //replace the "Choose a file" label
-                        $(this).next(".custom-file-label").html(fileName);
-                    });
-                </script>
     </form>
+
     <!--footer/fran -->
     <%- include("partials/footer") %>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
+    <script src="/js/validacionModificarProducto.js"></script>
+
   </body>
 </html>
