--- a/views/form_prod.ejs
+++ b/views/form_prod.ejs
@@ -257,7 +257,7 @@
 
                 <!-- boton enviar -->
                 <div class="col-12 d-flex justify-content-center mt-2">
-                    <button type="submit" class="btn btn-outline-warning mt-3 mb-3" onclick="validate()">
+                    <button type="submit" class="btn btn-outline-warning mt-3 mb-3" onclick="validar()">
                         Publicar
                     </button>
                 </div>
