--- a/views/partials/body_ventas.ejs
+++ b/views/partials/body_ventas.ejs
@@ -5,7 +5,7 @@
                 <h1 class="display-4">¿qué vas a publicar?</h1>
                 <p class="lead">Publica en solo minutos para que tu producto </br> 
                 esté en frente a millones de consumidores.</p>
-                <a class="btn btn-outline-dark btn-lg" href="#" role="button">Vender</a>
+                <a class="btn btn-outline-dark btn-lg" href="/products/form_prod" role="button">Vender</a>
             </div>
             <div class="col-4">    
                 <div class="position-relative">
