--- a/views/partials/body_ventas.ejs
+++ b/views/partials/body_ventas.ejs
@@ -9,7 +9,7 @@
             </div>
             <div class="col-4">    
                 <div class="position-relative">
-                    <div class="position-absolute">
+                    <div class="fixed-right">
                         <img class="beer_ventas position-absolute" width="50" src="img/banner/beer_shadow.png" alt="">
                     </div>
                 </div>
