--- a/views/product-edit-form.ejs
+++ b/views/product-edit-form.ejs
@@ -14,7 +14,7 @@
   <body class="bg_color">
     <!--header/javi -->
     <%- include("partials/header") %>
-     <form class="col-xl-9 col-lg-9 col-md-9 col-sm-12 mt-5 mb-5 mr-auto ml-auto bg-white text-dark p-4 rounded animate__animated animate__zoomIn" action="/products/<%= product.id %>/edit/" method="POST" enctype="multipart/form-data" id="form" onsubmit="return validar()">
+     <form class="col-xl-9 col-lg-9 col-md-9 col-sm-12 mt-5 mb-5 mr-auto ml-auto bg-white text-dark p-4 rounded animate__animated animate__zoomIn" action="/products/<%= product.id %>/edit/" method="POST" enctype="multipart/form-data" id="form" onsubmit="return validar(event)">
 
                 <div class="register-title col-12">
                     <h2 class="title_categoria">
@@ -61,6 +61,7 @@
                     </div>
                 </div>
                 <div class="row">
+
                      <!-- origen -->
                     <div class="form-group col-3">
                         <label for="sell_origin">Origen</label>
@@ -71,6 +72,7 @@
                             <option>Internacional</option>
                         </select>
                     </div>
+
                     <!-- tipo de Producto-->
                     <div class="form-group col-3">
                         <label for="">Tipo de Producto</label> </br>
