revision de codigo

--- a/views/form_prod.ejs
+++ b/views/form_prod.ejs
@@ -21,7 +21,7 @@
 
 
             <form class="col-xl-9 col-lg-9 col-md-9 col-sm-12 m-auto bg-white text-dark p-4 rounded animate__animated animate__zoomIn" 
-            action="/products/form_prod" method="POST" enctype="multipart/form-data" id="form" onsubmit="return validar(event)">
+            action="/products/form_prod" method="POST" enctype="multipart/form-data" id="form" onsubmit="return validar()">
                 <div class="register-title col-12">
                     <h2 class="title_categoria">
                         <i class="fas fa-hand-holding-usd text-black-50"></i></i> Vende por Canilla<strong>Libre</strong>.com
